Added Header section in index file

--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,14 @@
 <body>
     <h1>This is a Marketing Website heading</h1>
     <p>This is a paragraph about marketing website</p>
+<div class="Header-section">
+<nav>
+    <ul>
+        <a href="#"><li>Home</li></a>
+        <a href="#"><li>About</li></a>
+        <a href="#"><li>Contact</li></a>
+    </ul>
+</nav>
+</div>
 </body>
 </html>
