Images added in slider

--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,9 @@
 </nav>
 
 <div class="image-slider">
+<img src="#" alt="Image1">
+<img src="#" alt="Image2">
+<img src="#" alt="Image3">
 </div>
 </div>
 </body>
