--- a/Index.html
+++ b/Index.html
@@ -19,9 +19,25 @@
 </nav>
 
 <div class="image-slider">
-<img src="#" alt="Image1">
-<img src="#" alt="Image2">
-<img src="#" alt="Image3">
+    <div class="image-container">
+        <img src="#" alt="Image1">
+        <div class="content">
+            <h1>Marketing</h1>
+        </div>
+    </div>
+
+    <div class="image-container">
+        <img src="#" alt="Image1">
+        <div class="content">
+            <h1>Marketing</h1>
+        </div>
+    </div>
+    <div class="image-container">
+        <img src="#" alt="Image1">
+        <div class="content">
+            <h1>Marketing</h1>
+        </div>
+    </div>
 </div>
 </div>
 </body>
