--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,7 @@
         <a href="#"><li>Home</li></a>
         <a href="#"><li>About</li></a>
         <a href="#"><li>Contact</li></a>
+        <a href="#"><li>Packages</li></a>
     </ul>
 </nav>
 
